# ANFridge

./: .clang-tidy  CMakeLists.txt  readme.md
cmake/modules/: AN.cmake
include/ANFridge/: DetectionResult.h  Inference.hpp  OCR.hpp  OCRClassifier.hpp  OCRDetector.hpp  OCRDetectorONNX.hpp  OCRRecognizer.hpp  OCRRecognizerONNX.hpp  ObjectDetectorNative.h  postprocess_op.h  preprocess_op.h  utility.h
lib/: CMakeLists.txt
lib/ANFridge/: CMakeLists.txt  Inference.cpp  OCR.cpp  OCRClassifier.cpp  OCRDetector.cpp  OCRDetectorONNX.cpp  OCRRecognizer.cpp  OCRRecognizerONNX.cpp  ObjectDetectorNative.cpp  postprocess_op.cpp  preprocess_op.cpp  utility.cpp
proto/: CMakeLists.txt  fridge.proto
proto/cpp/: CMakeLists.txt  fridge.grpc.pb.cc  fridge.grpc.pb.h  fridge.pb.cc  fridge.pb.h
tools/: CMakeLists.txt
tools/ANFridgeGUI/: .manifest  CMakeLists.txt  ctpl.h  imspinner.h  main.cpp  resource.h  resources.rc  util.cu  util.h
tools/ANFridgeServe/: CMakeLists.txt  main.cpp
tools/inference-test/: CMakeLists.txt  main.cpp
tools/paddle_cpp_infer/: CMakeLists.txt
tools/test-client/: CMakeLists.txt  main.cpp
